add stress emphasis to keyword.

--- a/README
+++ b/README
@@ -73,7 +73,7 @@ Githubで管理された文書なら設定は簡単です．
 
 Subversion を使っている場合は少し面倒で，リポジトリのあるサーバで，コミットフックを設定しなければいけません．Post Commit Hook で Ping URL にアクセスするようにしてください．
 
-大切なことなのでもう一度書きます。
+**大切なこと**なのでもう一度書きます。
 
 Wikiの更新は，リポジトリの更新にHookして Ping URL にアクセスしてください．
 
