interfaceは相互に作用するもの(インター)の境界(フェイス)だからインターフェイスと訳すべし、と習いました!

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 * Wikihub (wikihub.org) の使い方
 
 
-Wikihub は，Git や Subversion にて文書を管理したいコマンドライン大好きなプログラマーさんたちが，文書を自分にあったやり方で更新しつつ，バージョン管理しつつ，でもウェブでも見たい，という欲張りな要望をかかえているだろうと勝手に判断し作成された，バージョン管理連携wikiインターフェースです．
+Wikihub は，Git や Subversion にて文書を管理したいコマンドライン大好きなプログラマーさんたちが，文書を自分にあったやり方で更新しつつ，バージョン管理しつつ，でもウェブでも見たい，という欲張りな要望をかかえているだろうと勝手に判断し作成された，バージョン管理連携wikiインターフェイスです．
 
 現在クローズドベータとして運営中．
 
